<resources>
    <string name="app_name">Projekt1Rain</string>
    <string name="title_favoriten">Favoriten</string>
    <string name="title_kartenansicht">Kartenansicht</string>
    <string name="title_einstellungen">Einstellungen</string>
    <string name="Foryou" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foryou">For You</string>
    <string name="Kartenansicht">Kartenansicht</string>
    <string name="Einstellungen">Einstellungen</string>
    <string name="line1">CityName</string>
    <string name="uhrzeit">Uhrzeit</string>
    <string name="temperatur">Temperatur</string>
    <string name="tagNacht">Tag/Nacht</string>
    <string name="map_key" >AIzaSyDAkpBNsNGOfwHqAaq2RNxDxYfccNAD9wY</string>
    <string name="delete">delete</string>
    <string name="cancelButton">cancel</string>
    <string name="hinzufügen">Hinzufügen Erfolgreich</string>
    <string name="temperature">Temperature : </string>
    <string name="refresh">\" Aktualisierung erfolgreich\"</string>
    <string name="favoritsetzen">Möchten Sie den ausgewählten Ort zu den Favoriten hinzufügen?</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="ok">Ok</string>
    <string name="temp">temp</string>
    <string name="winddeg"> Windrichtung</string>
    <string name="windgesch">Windgeschw.</string>
    <string name="uvi">Uvi index</string>
    <string name="sicht"> Sicht</string>
    <string name="wolken"> Wolken</string>
    <string name="detilansicht_vom_wetter">Detilansicht vom Wetter</string>
    <string name="stadt">Ausgewählte Stadt</string>
    <string name="suche">Stadt eingeben...</string>
    <string name="error">Es sind leider keine Wetterdaten für die gesuchte Stadt verfügbar, bitte versuchen Sie es erneut</string>
    <string name="tempCelsius">Temperatur der Nächsten Tage in Celsius</string>
    <string name="entfernen">Möchten Sie die ausgewählte Stadt wirklich aus den Favoriten entfernen?</string>
    <string name="info">Danke für die Nutzung unserer App.Da es sich noch in der Entwicklungsphase befindet kann es zur verzögerten Ladezeiten kommen, bitte warte beim ersten Appstart einige Sekunden und aktualiesiere die Seite indem du von Oben nach Unten wischt. Wir bedanken uns,das ProjectRain Entwicklerteam. Diese Info wird nur einmal angezeigt</string>
    <string name="keineverbindung">Keine Netzwerkverbindung, gespeicherte Daten werden angezeigt</string>
    <string name="erfolgreich">Verbindung Hergestellt</string>
    <string name="tempnextdays">Temperatur der nächsten Tage in Celsius</string>
    <string name="popnextdays">Niederschlagsmenge der nächsten Tage in mm</string>
    <string name="neustart">Bitte Starte die App neu um die Einstellung zu übernehmen</string>
    <string name="save"> Speichere die Städteliste ab, bitte warte einen Augenblick</string>
    <string name="tempNextHours">Temperatur für die nächsten Stunden in Celsius</string>
    <string name="City">" Die Stadt  "</string>
    <string name="add">"\"wurde zur Favoriten hinzugefügt "</string>
    <string name="wouldyou">"Wollen Sie die Stadt "</string>
    <string name="tothefavorites">" zu den Favoriten hinzufügen?\""</string>
</resources>