<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvCardViewForYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@android:color/holo_purple"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivCityPicture"
                android:layout_width="77dp"
                android:layout_height="69dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/line1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivUmbrella"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:src="@drawable/icons8_clouds_15px_1"
                app:layout_constraintStart_toEndOf="@id/ivArrow"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRegnet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/ivUmbrella"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:src="@drawable/ic_baseline_arrow_right_alt_24"
                app:layout_constraintStart_toEndOf="@id/tvtemperture"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="310dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:text="@string/uhrzeit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCityPicture" />

            <TextView
                android:id="@+id/tvtemperture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:textColor="@color/white"
                android:text="@string/temperatur"
                android:textSize="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCityName"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/ivDayNightIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tagNacht"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvCityName"
                app:layout_constraintTop_toBottomOf="@id/ivCityPicture"
                tools:srcCompat="@drawable/ic_sonnig" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chChart"
                android:layout_width="338dp"
                android:layout_height="105dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTime" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>







</androidx.constraintlayout.widget.ConstraintLayout>
