<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="60dp"
    android:scrollbars="vertical">


    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />


    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tvDetailIcon"
        android:layout_width="84dp"
        android:layout_height="78dp"
        app:layout_constraintTop_toBottomOf="@id/tvAddress"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft" />

    <TextView
        android:id="@+id/tvDetailTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailIcon" />



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mainCardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/tvDetailTemp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvWindDeg"
            android:layout_width="190dp"
            android:layout_height="100dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/purple_200">

            <TextView
                android:id="@+id/tvDetailClouds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/cvTitleClouds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="55dp"
                android:textColor="@color/white"
                android:text="@string/wolken"
                android:textSize="18dp"/>

            <ImageView
                android:id="@+id/cvIconClouds"
                android:src="@drawable/ic_baseline_cloud_72"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvUvi"
            android:layout_width="190dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="2dp"
            app:layout_constraintStart_toEndOf="@id/cvWindDeg"
            app:cardBackgroundColor="@color/purple_200">

            <TextView
                android:id="@+id/tvDetailWindDeg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/cvTitleWindDeg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="55dp"
                android:textColor="@color/white"
                android:text="@string/winddeg"
                android:textSize="14dp"/>

            <ImageView
                android:id="@+id/cvIconWindDeg"
                android:src="@drawable/icons8_wind_96px_1"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvVisibility"
            android:layout_width="190dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/purple_200"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/cvWindDeg">

            <TextView
                android:id="@+id/tvDetailUvi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/cvTitleUvi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="55dp"
                android:textColor="@color/white"
                android:text="@string/uvi"
                android:textSize="18dp"/>

            <ImageView
                android:id="@+id/cvIconUvi"
                android:src="@drawable/ic_baseline_wb_sunny_722"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvClouds"
            android:layout_width="190dp"
            app:layout_constraintStart_toEndOf="@id/cvVisibility"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/purple_200"
            app:layout_constraintTop_toBottomOf="@id/cvUvi">

            <TextView
                android:id="@+id/tvDetailVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/cvTitleVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="55dp"
                android:textColor="@color/white"
                android:text="@string/sicht"
                android:textSize="18dp"/>

            <ImageView
                android:id="@+id/cvIconVisibility"
                android:src="@drawable/ic_baseline_visibility_24"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvWindSpeed"
            android:layout_width="383dp"
            android:layout_marginTop="2dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="@color/purple_200"
            app:layout_constraintTop_toBottomOf="@id/cvClouds">

            <ImageView
                android:id="@+id/cvIconWindSpeed"
                android:src="@drawable/icons8_wind_turbine_96px"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/cvIconWindSpeed2"
                android:src="@drawable/icons8_wind_turbine_72px"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="90dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvDetailWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="280dp"
                android:textSize="28dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/cvTitleWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="280dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:text="@string/windgesch"
                android:textSize="18dp"/>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvBarchartTemp"
            android:layout_width="383dp"
            android:layout_height="180dp"
            android:layout_marginTop="2dp"
            app:cardBackgroundColor="@color/purple_200"
            app:layout_constraintTop_toBottomOf="@id/cvWindSpeed">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/bcDetailBarchartPop"
                android:layout_width="378dp"
                android:layout_height="180dp"
                app:layout_constraintHorizontal_bias="0.477" />



        </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="383dp"
                android:layout_height="180dp"
                android:layout_marginTop="2dp"

                app:cardBackgroundColor="@color/purple_200"
                app:layout_constraintTop_toBottomOf="@id/cvBarchartTemp">

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/bcDetailBarchart"
                    android:layout_width="378dp"
                    android:layout_height="180dp"
                    app:layout_constraintHorizontal_bias="0.477" />


            </com.google.android.material.card.MaterialCardView>



        </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>